# silentkeys

./: Cargo.toml  README.md  build.rs  silentkeys-resource.rc
crates/winbindings/: Cargo.toml
crates/winbindings/src/: lib.rs
src/: buffer.rs  config.rs  input.rs  main.rs  noti.rs  system_tray.rs
src/sys/: event_type.rs  input_event.rs  mod.rs  windows.rs
